add services handlers
